<?php

namespace App\Models;

// use Illuminate\Contracts\Auth\MustVerifyEmail;
use Illuminate\Database\Eloquent\Factories\HasFactory;
use Illuminate\Database\Eloquent\Relations\HasMany;
use Illuminate\Database\Eloquent\Relations\HasOne;
use Illuminate\Database\Eloquent\SoftDeletes;
use Illuminate\Foundation\Auth\User as Authenticatable;
use Illuminate\Notifications\Notifiable;
use Laravel\Sanctum\HasApiTokens;

class User extends Authenticatable
{
    use HasApiTokens, HasFactory, Notifiable, SoftDeletes;

    public const ROLE_ADMIN = 'admin';
    public const ROLE_SERVICE_MANAGER = 'jefe_servicio';
    public const ROLE_STAFF = 'personal';

    public const ROLES = [
        self::ROLE_ADMIN,
        self::ROLE_SERVICE_MANAGER,
        self::ROLE_STAFF,
    ];

    /**
     * The attributes that are mass assignable.
     *
     * @var array<int, string>
     */
    protected $fillable = [
        'name',
        'email',
        'password',
        'role',
        'active',
    ];

    /**
     * The attributes that should be hidden for serialization.
     *
     * @var array<int, string>
     */
    protected $hidden = [
        'password',
        'remember_token',
    ];

    /**
     * The attributes that should be cast.
     *
     * @var array<string, string>
     */
    protected $casts = [
        'email_verified_at' => 'datetime',
        'password' => 'hashed',
        'active' => 'boolean',
    ];

    public function isActive(): bool
    {
        return (bool) $this->active;
    }

    public function isAdmin(): bool
    {
        return $this->role === self::ROLE_ADMIN;
    }

    public function staffProfile(): HasOne
    {
        return $this->hasOne(Staff::class);
    }

    public function serviceManagers(): HasMany
    {
        return $this->hasMany(ServiceManager::class);
    }

    public function requestedShiftChanges(): HasMany
    {
        return $this->hasMany(ShiftChangeRequest::class, 'requested_by');
    }

    public function reviewedShiftChanges(): HasMany
    {
        return $this->hasMany(ShiftChangeRequest::class, 'reviewed_by');
    }

    public function internalNotifications(): HasMany
    {
        return $this->hasMany(InternalNotification::class);
    }

    public function managesHospitalService(int $hospitalServiceId): bool
    {
        return $this->serviceManagers()
            ->where('hospital_service_id', $hospitalServiceId)
            ->exists();
    }
}
